force-app/main/default/objects/MANIFEST__c/MANIFEST__c.object-meta.xml
<CustomObject>
    <label>マニフェストコード</label>
    <nameField>
        <displayFormat>MF-{000000}</displayFormat>
        <label>MANIFEST ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>