force-app/main/default/objects/MANIFEST__c/fields/CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY__c</fullName>
    <label>CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Passport Type</fullName>
            </value>
            <value>
                <fullName>GrossUnit</fullName>
            </value>
            <value>
                <fullName>Document&apos;s function</fullName>
            </value>
            <value>
                <fullName>Kind of packages</fullName>
            </value>
            <value>
                <fullName>Occupation</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>