force-app/main/default/objects/MANIFEST__c/fields/CODE__c.field-meta.xml
<CustomField>
    <fullName>CODE__c</fullName>
    <label>CODE</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>