force-app/main/default/objects/MANIFEST__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloFor_Service_Country</valueSetName>
    </valueSet>
</CustomField>