force-app/main/default/objects/MANIFEST__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CATEGORY__c</columns>
    <columns>CODE__c</columns>
    <columns>NAME__c</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>COUNTRY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>